--- a/branding-proces.html
+++ b/branding-proces.html
@@ -12,7 +12,7 @@
 <body class="BGbranding">
 
     <header class="header1" id="tiltop">
-        <a href="index.html"><img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media logo" class="headerlogo"></a>
+        <a href="index.html"><img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media logo" class="headerlogo"></a>
         <nav>
             <ul>
             <li><a href="kontakt.html"><img src="img/mail-ikon.png" alt="kontakt icon" class="kontaktikon"></a></li>
@@ -47,7 +47,7 @@
                 <p class="hero-gap-til-knap">Vores proces sikrer dig et professionelt resultat. Få et indblik i processen herunder.</p>
                 <a href="kontakt.html" class="knap">Kontakt os</a>
             </article>
-            <div class="hero-img imgtop">
+            <div class="hero-img imgtop hero-img-mobil">
                 <img  src="img/Illustration-brandingprocestop.png" alt="Illustration af computer">
             </div>
         </div>
@@ -206,7 +206,7 @@
  <footer class="footer-mobil">
     <hr class="seperator">
     <div class="footer-logo-placering">
-        <img class="footer-mobil-logo" src="img/Logo-ikon.ovenpå.tekst.png" alt="Logo Story Media">
+        <a href="index.html"><img class="footer-mobil-logo" src="img/Logo-ikon.ovenpå.tekst.png" alt="Logo Story Media"></a>
     </div>
     <div class="footer-nav-grid">
         <div class="footernav">
