--- a/kontakt.html
+++ b/kontakt.html
@@ -11,7 +11,7 @@
 </head>
 <body class="BGandre">
     <header class="header1" id="tiltop">
-        <a href="index.html"><img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media logo" class="headerlogo"></a>
+        <a href="index.html"><img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media logo" class="headerlogo"></a>
         <nav>
             <ul>
             <li><a href="kontakt.html"><img src="img/mail-ikon.png" alt="kontakt icon" class="kontaktikon"></a></li>
@@ -48,7 +48,7 @@
                 <p>Telefon: <a href="tel:+4599999999" class="text">+45 99 99 99 99</a></p>
                 </div>
             </article>
-            <div class="hero-img imgtop">
+            <div class="hero-img imgtop hero-img-mobil">
                 <img  src="img/illustration-kontakt-m.orange.png" alt="Illustration af en person der sidder klar ved telefon og mail">
             </div>
         </div>
@@ -160,7 +160,7 @@
      <footer class="footer-mobil">
         <hr class="seperator">
         <div class="footer-logo-placering">
-            <img class="footer-mobil-logo" src="img/Logo-ikon.ovenpå.tekst.png" alt="Logo Story Media">
+            <a href="index.html"><img class="footer-mobil-logo" src="img/Logo-ikon.ovenpå.tekst.png" alt="Logo Story Media"></a>
         </div>
         <div class="footer-nav-grid">
             <div class="footernav">
