--- a/om-story-media.html
+++ b/om-story-media.html
@@ -11,7 +11,7 @@
 </head>
 <body class="BGomos">
     <header class="header1" id="tiltop">
-        <a href="index.html"><img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media logo" class="headerlogo"></a>
+        <a href="index.html"><img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media logo" class="headerlogo"></a>
         <nav>
             <ul>
             <li><a href="kontakt.html"><img src="img/mail-ikon.png" alt="kontakt icon" class="kontaktikon"></a></li>
@@ -47,7 +47,7 @@
             <p class="hero-gap-til-knap">Her får du vores unikke historie.</p>
             <a href="kontakt.html" class="knap">Kontakt os</a>
         </article>
-        <div class="hero-img imgtop">
+        <div class="hero-img imgtop hero-img-mobil">
             <img  src="img/illustration-omos.png" alt="Illustration af to personer der sidder og snakker">
         </div>
     </div>
@@ -125,7 +125,7 @@
     <!--opstart-->
     <section class="omos-sektion">
         <div class="omos-logo-txt">
-            <img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media Logo">
+            <img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media Logo">
             <p>3 år efter multimedieuddannelsen fandt Elisabeth og Maja sammen og startede Story Media op med ønsket om at hjælpe kreative iværksættere at få brandet deres drøm.</p>
             <p>Story Media er baseret på unik <a href="storytelling.html" class="internlinks">storytelling</a>. Når man er iværksætter med et håndværk, udspringer det altid af en passion. Og den passion har en historie.</p>
             <p class="hero-gap-til-knap">Historien er vigtig for at forstå den værdi håndværket repræsenterer. Derfor er storytelling vores go to. Den skaber den røde tråd fra mennesket bag til produktet på hylden. </p>
@@ -208,7 +208,7 @@
      <footer class="footer-mobil">
         <hr class="seperator">
         <div class="footer-logo-placering">
-            <img class="footer-mobil-logo" src="img/Logo-ikon.ovenpå.tekst.png" alt="Logo Story Media">
+            <a href="index.html"><img class="footer-mobil-logo" src="img/Logo-ikon.ovenpå.tekst.png" alt="Logo Story Media"></a>
         </div>
         <div class="footer-nav-grid">
             <div class="footernav">
