--- a/ydelser.html
+++ b/ydelser.html
@@ -15,7 +15,7 @@
 <!--Header sektion-->
 
     <header class="header1" id="tiltop">
-        <a href="index.html"><img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media logo" class="headerlogo"></a>
+        <a href="index.html"><img src="img/Logo-ikon+tekst.på.linje.png" alt="Story Media logo" class="headerlogo"></a>
         <nav>
             <ul>
             <li><a href="kontakt.html"><img src="img/mail-ikon.png" alt="kontakt icon" class="kontaktikon"></a></li>
@@ -277,7 +277,7 @@
      <footer class="footer-mobil">
         <hr class="seperator">
         <div class="footer-logo-placering">
-            <img class="footer-mobil-logo" src="img/Logo-ikon.ovenpå.tekst.png" alt="Logo Story Media">
+            <a href="index.html"><img class="footer-mobil-logo" src="img/Logo-ikon.ovenpå.tekst.png" alt="Logo Story Media"></a>
         </div>
         <div class="footer-nav-grid">
             <div class="footernav">
