--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
      <footer class="footer-mobil">
         <hr class="seperator">
         <div class="footer-logo-placering">
-            <img class="footer-mobil-logo" src="img/Logo-ikon.ovenpå.tekst.png" alt="Logo Story Media">
+            <a href="index.html"><img class="footer-mobil-logo" src="img/Logo-ikon.ovenpå.tekst.png" alt="Logo Story Media"></a>
         </div>
         <div class="footer-nav-grid">
             <div class="footernav">
