--- a/storytelling.html
+++ b/storytelling.html
@@ -31,6 +31,7 @@
                         <li><a href="storytelling.html">Storytelling</a></li>
                         <li><a href="om-story-media.html">Om Story Media</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
+                        <li class="sog-dropdown"><a href="#">Søg<img src="img/søg-ikon.png" alt="søg-ikon"></a></li>
                     </ul>
                 </li>
             </ul>
@@ -65,13 +66,15 @@
 
         <!--Hovedindhold-->
         <div class="hvad-er-storytelling">
-       <article>
-            <h2>hvad er storytelling</h2>
-            <p>Storytelling er markedsføring på en autentisk, relevant og relationsskabende måde. Mennesker har fortalt historier omkring bålstedet siden urtiden. Det er en indlevende og relaterbar måde at formidle din virksomheds virke og produkter på.</p>
-            <p>Storytelling er din fortælling om, hvorfor din virksomhed eksisterer - din virksomheds WHY. Som oftest er det bundet op på livserfaringer, passion og skaberkraft, så der er altid nogle spændende byggesten til en storytelling i din iværksætterrejse. </p>
-            <p>Storytelling bygges både op omkring fortid, nutid og fremtid. Derfor vil redskabet være relevant kontinuerligt i dit arbejde med branding af din virksomhed.</p>
-        </article>
-            <img class="baalsted" src="img/baalsted.png" alt="Baalsted">
+            <article>
+                <h2>hvad er storytelling</h2>
+                <p>Storytelling er markedsføring på en autentisk, relevant og relationsskabende måde. Mennesker har fortalt historier omkring bålstedet siden urtiden. Det er en indlevende og relaterbar måde at formidle din virksomheds virke og produkter på.</p>
+                <p>Storytelling er din fortælling om, hvorfor din virksomhed eksisterer - din virksomheds WHY. Som oftest er det bundet op på livserfaringer, passion og skaberkraft, så der er altid nogle spændende byggesten til en storytelling i din iværksætterrejse. </p>
+                <p>Storytelling bygges både op omkring fortid, nutid og fremtid. Derfor vil redskabet være relevant kontinuerligt i dit arbejde med branding af din virksomhed.</p>
+            </article>
+            
+                <img class="baalsted" src="img/baalsted.png" alt="Baalsted">
+            
         </div>
 
        <article class="hvorfor-storytelling">
@@ -79,10 +82,10 @@
             <p>Når vi med storytelling fortæller om mennesket bag virksomheden, forbinder kunden sig til dit brand på et emotionelt plan. Det styrker dine kunderelationer og betyder i sidste ende større konvertering.</p>
             <h4>Med <strong>storytelling</strong> får du: </h4>
             <ul>
-                <li><strong>Øget troværdighed</strong> overfor dine kunder og dermed tillid til, at dine produkter kan tilfredsstille et behov.</li>
-                <li><strong>Øget brandawareness</strong> fordi du skiller dig ud og giver dit brand værdi.</li>
-                <li><strong>Længere besøgstid på din hjemmeside</strong>, fordi din visuelle identitet og sproget holder kunden fanget positivt. Det er positivt for SEO optimering.</li>
-                <li>Større sandsynlighed for at <strong>kunderne husker dig</strong> og din virksomhed. Storytelling gør indholdet af din branding relaterbart, vækker følelser og behovet for dit produkt øges.</li>
+                <li><p><strong>Øget troværdighed</strong> overfor dine kunder og dermed tillid til, at dine produkter kan tilfredsstille et behov.</p></li>
+                <li><p><strong>Øget brandawareness</strong> fordi du skiller dig ud og giver dit brand værdi.</p></li>
+                <li><p><strong>Længere besøgstid på din hjemmeside</strong>, fordi din visuelle identitet og sproget holder kunden fanget positivt. Det er positivt for SEO optimering.</p></li>
+                <li><p>Større sandsynlighed for at <strong>kunderne husker dig</strong> og din virksomhed. Storytelling gør indholdet af din branding relaterbart, vækker følelser og behovet for dit produkt øges.</p></li>
             </ul>
             <a href="ydelser.html" class="knap hvorfor-story-knap">Se vores ydelser</a>
         </article>
