--- a/ydelser.html
+++ b/ydelser.html
@@ -34,6 +34,7 @@
                         <li><a href="storytelling.html">Storytelling</a></li>
                         <li><a href="om-story-media.html">Om Story Media</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
+                        <li class="sog-dropdown"><a href="#">Søg<img src="img/søg-ikon.png" alt="søg-ikon"></a></li>
                     </ul>
                 </li>
             </ul>
@@ -94,7 +95,7 @@
                 </ul>
                 <div class="kontakt-visuel-container">
                     <p>Pris: 3.650,- ex moms</p>
-                    <a class="kontaktvisuel" href="kontakt.html">Kontakt</a>
+                    <a class="kontaktvisuel kontaktmobil" href="kontakt.html">Kontakt</a>
                 </div>
             </article>
 
@@ -113,7 +114,7 @@
                 </ul>
                 <div class="kontakt-visuel-container">
                     <p>Pris: 5.850,- ex moms</p>
-                    <a href="kontakt.html">Kontakt</a>
+                    <a class="kontaktmobil" href="kontakt.html">Kontakt</a>
                 </div>
             </article>
         </div>
@@ -126,10 +127,6 @@
         </article>
 
         <div class="orangebaggrundydelser"></div>
-        
-        <div class="orangebaggrundydelser-mobilet"></div>
-        <div class="orangebaggrundydelser-mobilto"></div>
-
         <div class="hjemmesidekasse-container">
             <section>
                 <div class="centrerhjemmeside">
@@ -148,6 +145,7 @@
                     <li><p>SEO optimeret</p></li>
                 </ul>
             </section>
+            <div class="orangebaggrundydelser-mobilet"></div>
             <section>
                 <div class="centrerhjemmeside">
                     <h2>Mellem</h2>
@@ -166,6 +164,7 @@
                     <li><p>1 måneds support (opdatering af hjemmeside)</p></li>
                 </ul>
             </section>
+            <div class="orangebaggrundydelser-mobilto"></div>
             <section>
                 <div class="centrerhjemmeside">
                     <h2>Stor</h2>
