--- a/branding-proces.html
+++ b/branding-proces.html
@@ -31,6 +31,7 @@
                         <li><a href="storytelling.html">Storytelling</a></li>
                         <li><a href="om-story-media.html">Om Story Media</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
+                        <li class="sog-dropdown"><a href="#">Søg<img src="img/søg-ikon.png" alt="søg-ikon"></a></li>
                     </ul>
                 </li>
             </ul>
