Tilføjet slideind i hero på alle sider pånær index.html

--- a/kontakt.html
+++ b/kontakt.html
@@ -41,7 +41,7 @@
     <main>
        <!--hero-område-->
        <div class="hero-container">    
-            <article class="hero-tekst">
+            <article class="hero-tekst slideind-venstre">
                 <h1>Skal vi tage en snak?</h1>
                 <p>Du behøver ikke være afklaret, inden vi snakker sammen. Vi hjælper dig med at analysere dine behov.</p>
                 <div class="text">
@@ -49,7 +49,7 @@
                 <p>Telefon: <a href="tel:+4599999999" class="text">+45 99 99 99 99</a></p>
                 </div>
             </article>
-            <div class="hero-img imgtop hero-img-mobil">
+            <div class="hero-img imgtop hero-img-mobil slideind-hojre">
                 <img  src="img/illustration-kontakt-m.orange.png" alt="Illustration af en person der sidder klar ved telefon og mail">
             </div>
         </div>
