--- a/om-story-media.html
+++ b/om-story-media.html
@@ -42,13 +42,13 @@
 
         <!--hero-område-->
        <div class="hero-container">    
-        <article class="hero-tekst">
+        <article class="hero-tekst slideind-venstre">
             <h1>Vores unikke historie</h1>
             <p>Hos Story Media brænder vi for digitalt håndværk. Vi er passionerede omkring vores arbejde med branding af din kreative virksomhed.</p>
             <p class="hero-gap-til-knap">Her får du vores unikke historie.</p>
             <a href="kontakt.html" class="knap">Kontakt os</a>
         </article>
-        <div class="hero-img imgtop hero-img-mobil">
+        <div class="hero-img imgtop hero-img-mobil slideind-hojre">
             <img  src="img/illustration-omos.png" alt="Illustration af to personer der sidder og snakker">
         </div>
     </div>
