--- a/storytelling.html
+++ b/storytelling.html
@@ -43,13 +43,13 @@
 
         <!--hero-område-->
         <div class="hero-container">
-            <article class="hero-tekst">
+            <article class="hero-tekst slideind-venstre">
                 <h1>Storytelling med wood design</h1>
                 <p>Mød Mads og hans iværksætterdrøm.</p>
                 <p class="hero-gap-til-knap">I samarbejde med Story Media og vores brug af storytelling er hans smukke håndværk og historie blevet til et unikt udtryk i hans brand.</p>
                 <a href="kontakt.html" class="knap">Kontakt os</a>
             </article>
-            <div class="hero-img imgtop hero-story-mobil-img">
+            <div class="hero-img imgtop hero-story-mobil-img slideind-hojre">
                 <img src="img/Wooddesignlogo.png" alt="Wood design logo">
             </div>
         </div>
