--- a/branding-proces.html
+++ b/branding-proces.html
@@ -41,14 +41,14 @@
     
     <main>
         <!--hero-område-->
-        <div class="hero-container">    
-            <article class="hero-tekst">
+        <div class="hero-container ">    
+            <article class="hero-tekst slideind-venstre">
                 <h1>Branding proces - one on one</h1>
                 <p>At skabe den visuelle del af dit brand, kræver research, analyse og kreativitet.</p>
                 <p class="hero-gap-til-knap">Vores proces sikrer dig et professionelt resultat. Få et indblik i processen herunder.</p>
                 <a href="kontakt.html" class="knap">Kontakt os</a>
             </article>
-            <div class="hero-img imgtop hero-img-mobil">
+            <div class="hero-img imgtop hero-img-mobil slideind-hojre">
                 <img  src="img/Illustration-brandingprocestop.png" alt="Illustration af computer">
             </div>
         </div>
