--- a/faq.html
+++ b/faq.html
@@ -41,7 +41,7 @@
     <main>         
         <!--hero-område-->
         <div class="hero-container">    
-            <article class="hero-tekst">
+            <article class="hero-tekst slideind-venstre">
                 <h1>FAQ</h1>
                 <p>Er du i tvivl om, hvad det præcist er, vi tilbyder?</p>
                 <p>Er du faret vild i ord som branding, value proposition og persona?</p>
@@ -70,7 +70,7 @@
              </nav>
 
             </article>
-            <div class="hero-img imgtop">
+            <div class="hero-img imgtop slideind-hojre">
                 <img  src="img/illustration-FAQ.png" alt="Illustration af FAQ - en der søger svar på deres spørgsmål">
             </div>
         </div>
