--- a/ydelser.html
+++ b/ydelser.html
@@ -45,12 +45,12 @@
     <main>
         <!--Hero sektion-->
         <div class="hero-container">
-            <article class="hero-tekst">
+            <article class="hero-tekst slideind-venstre">
                 <h1>Vi har en løsning til dit behov</h1>
                 <p class="hero-gap-til-knap">Uanset om du er klar til den fulde brandingpakke eller blot har brug for en løsning på en specifik opgave, så kan vi hjælpe.</p>
                 <a href="ydelser.html#pakkerne" class="knap">Gå til pakkerne</a>
             </article>
-            <div class="hero-img imgtop ydelser-hero-img">
+            <div class="hero-img imgtop ydelser-hero-img slideind-hojre">
                 <img src="img/illustration-ydelser.png" alt="Illustration af pige på kontor">
             </div>
         </div>
