--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <h2>Du er i centrum</h2>
         
         <div class="video-container">
-        <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" poster="img/illustration - forside (ledning anden side).png">
-            <source src="img/animeret-baggrund.mp4" type="video/mp4"></video>
+            <iframe alt="Story Media Brandingvideo" title="Story Media - Skal vi fortælle din historie?" src="https://www.youtube.com/embed/vYLdJlSJhjo" allowfullscreen="">
+            </iframe>
         </div>
     </div>
 
