--- a/storytelling.html
+++ b/storytelling.html
@@ -92,7 +92,7 @@
 
         <article class="case">
             <h2>case</h2>
-            <p>Mads kom til Story Media med ønsket om at brande sig selv med storytelling. Få et indblik i vores samarbejde i casebeskrivelsen herunder.</p>
+            <p>Mads kom til Story Media med ønsket om at brande sig selv med storytelling. Få et indblik i vores samarbejde i <a class="internlinks" href="branding-proces.html">branding processen</a> i casebeskrivelsen herunder.</p>
        </article>
 
         <section class="case-wrapper">
