Tilrette streger i ydelser.html

--- a/ydelser.html
+++ b/ydelser.html
@@ -66,6 +66,9 @@
     </div>
 
        <!--Hovedindhold-->
+        <div class="overlay">
+       <img src="img/ydelser-streg1.png" alt="stiblet linje der pynter siden" class="stregen-fyld yd-streg">
+        </div>
 
         <div class="stark-container">
            
@@ -120,11 +123,17 @@
         </div>
 
         <!--Hjemmesidetekst og pakker-->
+
+        <div class="overlay">
+            <img src="img/ydelser-streg2.png" alt="stiblet linje der pynter siden" class="stregen-fyld yd-streg2">
+             </div>
+
         <article class="hjemmesidetekst" id="pakkerne">
             <h2>Skræddersy din hjemmeside</h2>
             <p>Din hjemmeside er dit ansigt udad til kunden. Den skal fange din kundes opmærksomhed gennem din unikke fortælling om din virksomhed.</p>
             <p>Du har få sekunder på din hjemmeside til at fange din kundes interesse. Derfor skal udtrykket og følelsen for din passion være spot on fra første øjekast. Vi hjælper din virksomhed med at skille sig ud, blive bemærket og vokse til at blive det unikke brand du drømmer om.</p>
         </article>
+
 
         <div class="orangebaggrundydelser"></div>
         <div class="hjemmesidekasse-container">
@@ -188,6 +197,10 @@
         <hr class="seperatorbeige">
 
         <!--Den specifikke-->
+
+        <div class="overlay">
+            <img src="img/ydelser-streg3.png" alt="stiblet linje der pynter siden" class="stregen-fyld yd-streg">
+             </div>
 
         <div  class="specifikke">
             <article>
