Tilføjet streger til brandingproces.html

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -66,6 +66,9 @@
        
         <!--Hovedindhold-->
 
+        <div class="overlay">
+            <img src="img/bp-streg.png" alt="stiblet linje der pynter siden" class="stregen-fyld bp-streg">
+             </div>
 
         <div class="branding-container-venstre">
             <section>
@@ -85,6 +88,10 @@
             </div>
         </div>
 
+        <div class="overlay">
+            <img src="img/bp-streg1.png" alt="stiblet linje der pynter siden" class="stregen-fyld bp-streg1">
+             </div>
+
         <div class="branding-container-hojre">
             <section>
                 <h3>Hvem er den perfekte kunde?</h3>
@@ -100,6 +107,10 @@
                 <img src="img/brandingproces-kunde.png" alt="Finger peger på en computerskærm">
             </div>
         </div>
+
+        <div class="overlay">
+            <img src="img/bp-streg2.png" alt="stiblet linje der pynter siden" class="stregen-fyld bp-streg2">
+             </div>
 
         <div class="branding-container-venstre">
             <section>
@@ -118,6 +129,10 @@
             </div>
         </div>
 
+        <div class="overlay">
+            <img src="img/bp-streg3.png" alt="stiblet linje der pynter siden" class="stregen-fyld bp-streg3">
+        </div>
+
         <div class="branding-container-hojre">
             <section>
                 <h3>Markedsføring</h3>
@@ -132,6 +147,10 @@
             <div class="branding-img-bokse-hojre">
                 <img src="img/brandingproces-markedsfoering.png" alt="Billede med teksten Passion led us here">
             </div>
+        </div>
+
+        <div class="overlay">
+            <img src="img/bp-streg4.png" alt="stiblet linje der pynter siden" class="stregen-fyld bp-streg4">
         </div>
 
         <!--tekst road to succes-->
