--- a/storytelling.html
+++ b/storytelling.html
@@ -50,7 +50,7 @@
                 <a href="kontakt.html" class="knap">Kontakt os</a>
             </article>
             <div class="hero-img imgtop hero-story-mobil-img slideind-hojre">
-                <img src="img/Wooddesignlogo.png" alt="Wood design logo">
+                <img src="img/illustration-storytellingside.png" alt="Wood design logo">
             </div>
         </div>
     
