--- a/ydelser.html
+++ b/ydelser.html
@@ -46,8 +46,8 @@
         <!--Hero sektion-->
         <div class="hero-container">
             <article class="hero-tekst slideind-venstre">
-                <h1>Vi har en løsning til dit behov</h1>
-                <p class="hero-gap-til-knap">Uanset om du er klar til den fulde brandingpakke eller blot har brug for en løsning på en specifik opgave, så kan vi hjælpe.</p>
+                <h1>Grafisk design der løfter din virksomhed</h1>
+                <p class="hero-gap-til-knap">Uanset om du er klar til den fulde brandingpakke eller blot har brug for en løsning på en specifik designopgave, så kan vi hjælpe.</p>
                 <a href="ydelser.html#pakkerne" class="knap">Gå til pakkerne</a>
             </article>
             <div class="hero-img imgtop ydelser-hero-img slideind-hojre">
@@ -129,8 +129,8 @@
              </div>
 
         <article class="hjemmesidetekst" id="pakkerne">
-            <h2>Skræddersy din hjemmeside</h2>
-            <p>Din hjemmeside er dit ansigt udad til kunden. Den skal fange din kundes opmærksomhed gennem din unikke fortælling om din virksomhed.</p>
+            <h2>Vi designer hjemmesider, der sælger</h2>
+            <p>Din hjemmeside er dit ansigt udad til kunden. Den skal fange din kundes opmærksomhed gennem design og din unikke fortælling om din virksomhed.</p>
             <p>Du har få sekunder på din hjemmeside til at fange din kundes interesse. Derfor skal udtrykket og følelsen for din passion være spot on fra første øjekast. Vi hjælper din virksomhed med at skille sig ud, blive bemærket og vokse til at blive det unikke brand du drømmer om.</p>
         </article>
 
@@ -204,6 +204,7 @@
 
         <div  class="specifikke">
             <article>
+                <h4 class="overoverskrift">Garanteret kreativitet</h4>
                 <h2>Den specifikke</h2>
                 <p>Har du kun brug for hjælp til specifikke opgaver, er det også en mulighed. Vi har listet nogle af de dele op, som vi ved, der er brug for. </p>
                 <p class="specafstand">Listen er ikke udtømmende - du er velkommen til at kontakte os med lige præcis dit behov.</p>
