Tekstrettelse i ydelser.html

--- a/ydelser.html
+++ b/ydelser.html
@@ -206,8 +206,8 @@
             <article>
                 <h4 class="overoverskrift">Garanteret kreativitet</h4>
                 <h2>Den specifikke</h2>
-                <p>Har du kun brug for hjælp til specifikke opgaver, er det også en mulighed. Vi har listet nogle af de dele op, som vi ved, der er brug for. </p>
-                <p class="specafstand">Listen er ikke udtømmende - du er velkommen til at kontakte os med lige præcis dit behov.</p>
+                <p>Har du kun brug for hjælp til specifikke opgaver, er det også en mulighed. Vi har listet nogle af de løsninger op, som vi ved, der er brug for. </p>
+                <p class="specafstand">Listen er ikke begrænset - du er velkommen til at kontakte os med lige præcis dit behov.</p>
                 <ul class="specafstand">
                     <li><p>Logo</p></li>
                     <li><p>Bannere</p></li>
