Tekstrettelser til Brandingproces.html

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -43,7 +43,7 @@
         <!--hero-område-->
         <div class="hero-container ">    
             <article class="hero-tekst slideind-venstre">
-                <h1>Branding proces - one on one</h1>
+                <h1>Professionel Branding proces</h1>
                 <p>At skabe den visuelle del af dit brand, kræver research, analyse og kreativitet.</p>
                 <p class="hero-gap-til-knap">Vores proces sikrer dig et professionelt resultat. Få et indblik i processen herunder.</p>
                 <a href="kontakt.html" class="knap">Kontakt os</a>
@@ -72,7 +72,7 @@
 
         <div class="branding-container-venstre">
             <section>
-                <h3>Hvad gør din virksomhed unik?</h3>
+                <h3>Find ind til kernen af dit brand</h3>
                 <p>Vi analyserer og laver research</p>
                 <ul>
                     <li><p>din unikke historie</p></li>
@@ -94,13 +94,12 @@
 
         <div class="branding-container-hojre">
             <section>
-                <h3>Hvem er den perfekte kunde?</h3>
-                <p>Vi finder din perfekte kunde, så du kan målrette din markedsføring</p>
+                <h3>Målrettet branding</h3>
+                <p>Vi finder kunden, der passer perfekt til din virksomhed, så du kan målrette din markedsføring</p>
                 <ul>
                     <li><p>målgruppe</p></li>
                     <li><p>persona</p></li>
                     <li><p>sprog</p></li>
-                    <li><p>SMUK modellen</p></li>
                 </ul>
             </section>
             <div class="branding-img-bokse-hojre">
@@ -115,7 +114,7 @@
         <div class="branding-container-venstre">
             <section>
                 <h3>Visuel identitet</h3>
-                <p>Vi finder i samarbejde frem til farver og design, der giver den helt rigtige følelse af dit brand.</p>
+                <p>Vi finder i samarbejde frem til farver og design, der vækker den helt rigtige følelse af dit brand.</p>
                 <ul>
                     <li><p>moodboard</p></li>
                     <li><p>farvepalette</p></li>
@@ -135,8 +134,8 @@
 
         <div class="branding-container-hojre">
             <section>
-                <h3>Markedsføring</h3>
-                <p>Vi sammensætter en markeds-føringsstrategi sammen med dig som både er effektiv og realistisk.</p>
+                <h3>Branding strategi</h3>
+                <p>Vi sammensætter en markedsføringsstrategi sammen med dig som både er effektiv og realistisk.</p>
                 <ul>
                     <li><p>strategi</p></li>
                     <li><p>bannere</p></li>
@@ -155,10 +154,12 @@
 
         <!--tekst road to succes-->
         <h2 class="roadtosucces">Road to succes</h2>
+        <p class="roadtosucces2">Processen er din garanti for et gennemført resultat. Når vi kender din drøm, tilpasser og skræddersyr vi løsningerne, så de løfter din virksomhed til nye højder.</p>
+        <p class="roadtosucces3">Skal du med?</p>
 
         <!--Kontakt knap-->
         <div class="knap-container">
-            <a class="knap" href="kontakt.html">Kontakt os</a>
+            <a class="knap" href="kontakt.html">Tag kontakt</a>
         </div>
 
         <!--Pil til toppen-->
