--- a/storytelling.html
+++ b/storytelling.html
@@ -44,8 +44,8 @@
         <!--hero-område-->
         <div class="hero-container">
             <article class="hero-tekst slideind-venstre">
-                <h1>Storytelling med wood design</h1>
-                <p>Mød Mads og hans iværksætterdrøm.</p>
+                <h1>Løft dit brand med unik storytelling</h1>
+                <p>Bliv klogere på hvilken værdi storytelling kan give din virksomhed og bliv inspireret af Mads og hans iværksætterdrøm. </p>
                 <p class="hero-gap-til-knap">I samarbejde med Story Media og vores brug af storytelling er hans smukke håndværk og historie blevet til et unikt udtryk i hans brand.</p>
                 <a href="kontakt.html" class="knap">Kontakt os</a>
             </article>
@@ -67,10 +67,10 @@
         <!--Hovedindhold-->
         <div class="hvad-er-storytelling">
             <article>
-                <h2>hvad er storytelling</h2>
-                <p>Storytelling er markedsføring på en autentisk, relevant og relationsskabende måde. Mennesker har fortalt historier omkring bålstedet siden urtiden. Det er en indlevende og relaterbar måde at formidle din virksomheds virke og produkter på.</p>
+                <h2>Storytelling er indlevelse</h2>
+                <p>Storytelling er markedsføring på en autentisk, relevant og relationsskabende måde. Mennesker har fortalt historier omkring bålstedet siden urtiden. Det er en indlevende og relaterbar måde at formidle din virksomheds budskab og produkter på.</p>
                 <p>Storytelling er din fortælling om, hvorfor din virksomhed eksisterer - din virksomheds WHY. Som oftest er det bundet op på livserfaringer, passion og skaberkraft, så der er altid nogle spændende byggesten til en storytelling i din iværksætterrejse. </p>
-                <p>Storytelling bygges både op omkring fortid, nutid og fremtid. Derfor vil redskabet være relevant kontinuerligt i dit arbejde med branding af din virksomhed.</p>
+                <p>Storytelling bygges både op omkring fortid, nutid og fremtid. Derfor vil fortælling være relevant kontinuerligt i dit arbejde med branding af din virksomhed.</p>
             </article>
             
                 <img class="baalsted" src="img/baalsted.png" alt="Baalsted">
@@ -78,13 +78,13 @@
         </div>
 
        <article class="hvorfor-storytelling">
-            <h2>hvorfor storytelling</h2>
+            <h2>Din gevinst med storytelling</h2>
             <p>Når vi med storytelling fortæller om mennesket bag virksomheden, forbinder kunden sig til dit brand på et emotionelt plan. Det styrker dine kunderelationer og betyder i sidste ende større konvertering.</p>
             <h4>Med <strong>storytelling</strong> får du: </h4>
             <ul>
                 <li><p><strong>Øget troværdighed</strong> overfor dine kunder og dermed tillid til, at dine produkter kan tilfredsstille et behov.</p></li>
                 <li><p><strong>Øget brandawareness</strong> fordi du skiller dig ud og giver dit brand værdi.</p></li>
-                <li><p><strong>Længere besøgstid på din hjemmeside</strong>, fordi din visuelle identitet og sproget holder kunden fanget positivt. Det er positivt for SEO optimering.</p></li>
+                <li><p><strong>Længere besøgstid på din hjemmeside</strong>, fordi din visuelle identitet og sproget du bruger, fanger kundens interesse. Det er positivt for SEO optimering.</p></li>
                 <li><p>Større sandsynlighed for at <strong>kunderne husker dig</strong> og din virksomhed. Storytelling gør indholdet af din branding relaterbart, vækker følelser og behovet for dit produkt øges.</p></li>
             </ul>
             <a href="ydelser.html" class="knap hvorfor-story-knap">Se vores ydelser</a>
